Refactor project to SaasMultirepo branding; update backend configurations, environment variables, and dependencies; add Docker Compose setup; document commands for migrations and application startup.

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ Thumbs.db
 # Uncomment these if you don't want to track project instances in this repo
 # jira-integration/
 # azure-document-ai/
-# careerhub-resume/
+# saas_multirepo-resume/
 
 # But DO track the template/boilerplate if it exists
 !saas-fastapi-template/
