--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -16,6 +16,7 @@ ACCESS_TOKEN_EXPIRES_MINUTES=30
 REFRESH_TOKEN_EXPIRES_DAYS=7
 
 # Database
+DATABASE_URL=postgresql://saas_multirepo:saas_multirepo_pass@localhost:5432/saas_multirepo
 DATABASE_URL=sqlite:///./app.db
 
 # Redis
