--- a/apps/backend/alembic.ini
+++ b/apps/backend/alembic.ini
@@ -1,7 +1,7 @@
 [alembic]
 script_location = alembic
 prepend_sys_path = .
-sqlalchemy.url = postgresql://careerhub:careerhub_pass@localhost:5432/careerhub
+sqlalchemy.url = postgresql://saas_multirepo:saas_multirepo_pass@localhost:5432/saas_multirepo
 
 [loggers]
 keys = root,sqlalchemy,alembic
